--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,18 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
-            background-color: black;
-            background-image: url(imagens/wallpaper002.jpg);
-            background-position: center top;
+            height: 100vh;
+            /*background-color: black;
+            background-image: url('imagens/wallpaper002.jpg');
+            background-position: center center;
             background-repeat: no-repeat;
-            background-position: cover;
+            background-size: cover;
+            background-attachment: fixed;
+
+
+            /*Shothand - background 
+            color > image > position > repeat > {size} > attachment*/
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -25,7 +34,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, ea. Repellendus deserunt eaque assumenda fuga dicta deleniti debitis quod repudiandae eum perferendis perspiciatis a ex, adipisci excepturi alias blanditiis commodi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure officiis nihil veniam perspiciatis. Nihil aliquid, iste laboriosam tenetur corporis, delectus, temporibus assumenda reprehenderit velit nulla officiis minus ea at itaque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ullam dolor perferendis, iste molestiae veniam atque vitae ea voluptatum quo nesciunt aperiam explicabo fuga, nemo eos reprehenderit ut quisquam doloribus?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, ea. Repellendus deserunt eaque assumenda fuga dicta deleniti debitis quod repudiandae eum perferendis perspiciatis a ex, adipisci excepturi alias blanditiis commodi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure officiis nihil veniam perspiciatis. Nihil aliquid, iste laboriosam tenetur corporis, delectus, temporibus assumenda reprehenderit velit nulla officiis minus ea at itaque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ullam dolor perferendis, iste molestiae veniam atque vitae ea voluptatum quo nesciunt aperiam explicabo fuga, nemo eos reprehenderit ut quisquam doloribus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste dolores laudantium iusto et debitis assumenda esse, voluptatem consequuntur. Ullam pariatur sequi eum labore quod eveniet aliquid doloribus ratione vero blanditiis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eveniet optio, saepe sed quisquam consectetur praesentium quam delectus nulla, a in cum modi pariatur fuga deserunt quod reprehenderit ut nesciunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ipsum saepe aperiam. Modi omnis vero ea consectetur illo laboriosam ipsam. Commodi facilis qui temporibus quasi inventore laboriosam doloribus dolorem voluptatibus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate modi eaque pariatur! Tempore consequatur, laborum tempora cumque veritatis temporibus ea magni? Ut in similique accusamus unde commodi assumenda possimus consequuntur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate laborum rerum id tenetur, excepturi quas accusamus perspiciatis, a placeat totam voluptas ipsa. Quo molestiae numquam porro vel odit beatae maiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam quod quo, dolor non modi sunt dignissimos totam omnis, hic eveniet, obcaecati quibusdam facere? Aspernatur voluptate mollitia ratione facere vero! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit repudiandae, cum dolorem quibusdam rem rerum enim repellendus similique saepe quam distinctio explicabo magni dicta debitis ipsam, voluptatum vel odit ex?</p>
     </main>
 </body>
 </html>
