--- a/exercicios/ex024/paginas-extras/pag001.html
+++ b/exercicios/ex024/paginas-extras/pag001.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabelas Responsivas</title>
-
+    <title>Site de Teste</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
+            background-color: lightgray;
             
         }
 
@@ -31,15 +31,12 @@
             background-color: rgb(228, 228, 228);
         }
 
-        div#container {
-            overflow-x: auto;
+        tr:nth-child(odd) {
+            background-color: white;
         }
-        </style>
+    </style>
 </head>
 <body>
-    <h1>Tabelas em telas pequenas</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore fuga qui vel minima, molestias ullam sed eius unde, obcaecati harum fugiat, veritatis molestiae nihil nam! Quidem sit facilis asperiores in?</p>
-    <div id="container">
     <table>
         <caption>Vendas de Produtos por mês</caption>
             <thead>
@@ -167,6 +164,5 @@
                 </tr>
             </tbody>
                 </table>
-        </div>
 </body>
 </html>
